<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context="com.breaktime.chords.MainMenu">

    <ImageView
        android:id="@+id/guitar"
        android:layout_width="251dp"
        android:layout_height="453dp"
        android:background="@drawable/guitar_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chords" />

    <com.luolc.emojirain.EmojiRainLayout
        android:id="@+id/activity_main_menu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

    </com.luolc.emojirain.EmojiRainLayout>

    <ImageButton
    android:id="@+id/dayNightImage"
    android:layout_width="30dp"
    android:layout_height="30dp"
    android:layout_marginTop="15dp"
    android:layout_marginEnd="15dp"
    android:onClick="setDayNightMode"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/language"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:onClick="changeLanguage"
        android:layout_marginTop="10dp"
        android:textSize="18dp"
        android:visibility="gone"
        android:text="@string/language"
        android:background="#00000000"
        app:layout_constraintStart_toStartOf="@+id/dayNightImage"
        app:layout_constraintTop_toBottomOf="@+id/dayNightImage" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/activity_main_menu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chords"
        app:layout_constraintVertical_bias="0.2">

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="openLearnChords"
            android:textColor="@color/buttonTextColor"
            android:layout_marginTop="@dimen/mainMenuMarginButtons"
            android:layout_marginBottom="@dimen/mainMenuMarginButtons"
            android:background="@drawable/buttons_style_main_menu"
            android:paddingStart="@dimen/mainMenuPaddingButtonsStartEnd"
            android:paddingEnd="@dimen/mainMenuPaddingButtonsStartEnd"
            android:paddingTop="@dimen/mainMenuPaddingButtonsTopBottom"
            android:paddingBottom="@dimen/mainMenuPaddingButtonsTopBottom"
            android:text="@string/learn_chords" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/mainMenuMarginButtons"
            android:layout_marginBottom="@dimen/mainMenuMarginButtons"
            android:background="@drawable/buttons_style_main_menu"
            android:paddingStart="@dimen/mainMenuPaddingButtonsStartEnd"
            android:paddingTop="@dimen/mainMenuPaddingButtonsTopBottom"
            android:paddingEnd="@dimen/mainMenuPaddingButtonsStartEnd"
            android:paddingBottom="@dimen/mainMenuPaddingButtonsTopBottom"
            android:onClick="openChordsQuiz"
            android:text="@string/chord_quiz"
            android:textColor="@color/buttonTextColor" />

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="openSearchChord"
            android:textColor="@color/buttonTextColor"
            android:layout_marginTop="@dimen/mainMenuMarginButtons"
            android:layout_marginBottom="@dimen/mainMenuMarginButtons"
            android:background="@drawable/buttons_style_main_menu"
            android:paddingStart="@dimen/mainMenuPaddingButtonsStartEnd"
            android:paddingEnd="@dimen/mainMenuPaddingButtonsStartEnd"
            android:paddingTop="@dimen/mainMenuPaddingButtonsTopBottom"
            android:paddingBottom="@dimen/mainMenuPaddingButtonsTopBottom"
            android:text="@string/chord_search" />

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="openStrumming"
            android:textColor="@color/buttonTextColor"
            android:layout_marginTop="@dimen/mainMenuMarginButtons"
            android:layout_marginBottom="@dimen/mainMenuMarginButtons"
            android:background="@drawable/buttons_style_main_menu"
            android:paddingStart="@dimen/mainMenuPaddingButtonsStartEnd"
            android:paddingEnd="@dimen/mainMenuPaddingButtonsStartEnd"
            android:paddingTop="@dimen/mainMenuPaddingButtonsTopBottom"
            android:paddingBottom="@dimen/mainMenuPaddingButtonsTopBottom"
            android:text="@string/strumming" />
    </LinearLayout>

    <ImageView
        android:id="@+id/strumming"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/strumming_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/and_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/strumming" />

    <ImageView
        android:id="@+id/chords"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/chords_text"
        app:layout_constraintEnd_toEndOf="@+id/strumming"
        app:layout_constraintStart_toStartOf="@+id/strumming"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
</androidx.constraintlayout.widget.ConstraintLayout>