<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_gravity="center"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    tools:context=".ChordsQuiz">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        app:cardBackgroundColor="@color/backgroundColorSettings"
        app:cardCornerRadius="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="3dp"
                    android:fontFamily="@font/abril_fatface"
                    android:text="@string/settings"
                    android:textColor="#E60A3152"
                    android:textSize="26sp" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/settings" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/abril_fatface"
                android:gravity="center"
                android:text="@string/amount"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center">

                <TextView
                    android:id="@+id/downMin"
                    android:layout_width="50dp"
                    android:layout_height="30dp"
                    android:gravity="right"
                    android:text="-"
                    android:onClick="downAmount"
                    android:shadowColor="#fff"
                    android:textColor="#2B2B2B"
                    android:shadowRadius="3"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:layout_marginEnd="5dp"/>

                <TextView
                    android:id="@+id/amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="1"
                    android:textSize="16sp"
                    android:textColor="@color/SettingsTimeTextColor"/>

                <TextView
                    android:id="@+id/riseMin"
                    android:layout_width="50dp"
                    android:layout_height="30dp"
                    android:gravity="left"
                    android:text="+"
                    android:onClick="riseAmount"
                    android:shadowColor="#fff"
                    android:textColor="#2B2B2B"
                    android:shadowRadius="3"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:layout_marginStart="5dp"/>
            </LinearLayout>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/abril_fatface"
                android:gravity="center"
                android:text="@string/chords"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="7dp"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginBottom="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/chord_M"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/buttons_style_chord"
                        android:gravity="center"
                        android:onClick="setActivatedSettings"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="2dp"
                            android:gravity="center"
                            android:text="A"
                            android:onClick="setActivatedSettings"
                            android:textSize="12sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/chord_Sharp"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1"
                        android:onClick="setActivatedSettings"
                        android:background="@drawable/buttons_style_chord"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="2dp"
                            android:gravity="center"
                            android:onClick="setActivatedSettings"
                            android:text="A#"
                            android:textSize="12sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/chord_Sharp_m"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:onClick="setActivatedSettings"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/buttons_style_chord"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="2dp"
                            android:gravity="center"
                            android:onClick="setActivatedSettings"
                            android:text="A#m"
                            android:textSize="12sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/chord_m"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:onClick="setActivatedSettings"
                        android:layout_weight="1"
                        android:background="@drawable/buttons_style_chord"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:onClick="setActivatedSettings"
                            android:layout_marginLeft="2dp"
                            android:gravity="center"
                            android:text="Am"
                            android:textSize="12sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/chord_7"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/buttons_style_chord"
                        android:gravity="center"
                        android:onClick="setActivatedSettings"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="2dp"
                            android:gravity="center"
                            android:onClick="setActivatedSettings"
                            android:text="A7"
                            android:textSize="12sp" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/chord_m7"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/buttons_style_chord"
                        android:gravity="center"
                        android:onClick="setActivatedSettings"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="2dp"
                            android:onClick="setActivatedSettings"
                            android:gravity="center"
                            android:text="Am7"
                            android:textSize="12sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/chord_9"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/buttons_style_chord"
                        android:onClick="setActivatedSettings"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="2dp"
                            android:gravity="center"
                            android:onClick="setActivatedSettings"
                            android:text="A9"
                            android:textSize="12sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/chord_m9"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:onClick="setActivatedSettings"
                        android:layout_weight="1"
                        android:background="@drawable/buttons_style_chord"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:onClick="setActivatedSettings"
                            android:layout_marginLeft="2dp"
                            android:gravity="center"
                            android:text="Am9"
                            android:textSize="12sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/chord_dim"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1"
                        android:onClick="setActivatedSettings"
                        android:background="@drawable/buttons_style_chord"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="2dp"
                            android:gravity="center"
                            android:onClick="setActivatedSettings"
                            android:text="Adim"
                            android:textSize="12sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/chord_sus4"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/buttons_style_chord"
                        android:gravity="center"
                        android:onClick="setActivatedSettings"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="2dp"
                            android:gravity="center"
                            android:text="Asus4"
                            android:onClick="setActivatedSettings"
                            android:textSize="12sp" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>


        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/close"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/ic_baseline_close_24"
        android:elevation="5dp" />

</RelativeLayout>